// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SubGenerator docker of rust JHipster blueprint > microservice with consul > should succeed 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "docker/app.yml": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/README.md": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/application-dev.yml": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/application-prod.yml": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/application.yml": {
    "stateCleared": "modified",
  },
  "docker/config/git2consul.json": {
    "stateCleared": "modified",
  },
  "docker/consul.yml": {
    "stateCleared": "modified",
  },
  "docker/hazelcast-management-center.yml": {
    "stateCleared": "modified",
  },
  "docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "docker/services.yml": {
    "stateCleared": "modified",
  },
  "docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "docker/zipkin.yml": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "template-file-docker": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator docker of rust JHipster blueprint > microservice with consul and vault > should succeed 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "docker/app.yml": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/README.md": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/application-dev.yml": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/application-prod.yml": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/application.yml": {
    "stateCleared": "modified",
  },
  "docker/config/git2consul.json": {
    "stateCleared": "modified",
  },
  "docker/consul.yml": {
    "stateCleared": "modified",
  },
  "docker/hazelcast-management-center.yml": {
    "stateCleared": "modified",
  },
  "docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "docker/services.yml": {
    "stateCleared": "modified",
  },
  "docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "docker/vault-init/vault-init.sh": {
    "stateCleared": "modified",
  },
  "docker/vault.yml": {
    "stateCleared": "modified",
  },
  "docker/zipkin.yml": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "template-file-docker": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator docker of rust JHipster blueprint > microservice with consul but external config disabled > should succeed 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "docker/app.yml": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/README.md": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/application.yml": {
    "stateCleared": "modified",
  },
  "docker/config/git2consul.json": {
    "stateCleared": "modified",
  },
  "docker/consul.yml": {
    "stateCleared": "modified",
  },
  "docker/hazelcast-management-center.yml": {
    "stateCleared": "modified",
  },
  "docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "docker/services.yml": {
    "stateCleared": "modified",
  },
  "docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "docker/zipkin.yml": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "template-file-docker": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator docker of rust JHipster blueprint > microservice with consul config profiles > should succeed 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "docker/app.yml": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/README.md": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/application-dev.yml": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/application-prod.yml": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/application.yml": {
    "stateCleared": "modified",
  },
  "docker/config/git2consul.json": {
    "stateCleared": "modified",
  },
  "docker/consul.yml": {
    "stateCleared": "modified",
  },
  "docker/hazelcast-management-center.yml": {
    "stateCleared": "modified",
  },
  "docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "docker/services.yml": {
    "stateCleared": "modified",
  },
  "docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "docker/zipkin.yml": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "template-file-docker": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator docker of rust JHipster blueprint > microservice without vault > should succeed 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "docker/app.yml": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/README.md": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/application-dev.yml": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/application-prod.yml": {
    "stateCleared": "modified",
  },
  "docker/central-server-config/application.yml": {
    "stateCleared": "modified",
  },
  "docker/config/git2consul.json": {
    "stateCleared": "modified",
  },
  "docker/consul.yml": {
    "stateCleared": "modified",
  },
  "docker/hazelcast-management-center.yml": {
    "stateCleared": "modified",
  },
  "docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "docker/services.yml": {
    "stateCleared": "modified",
  },
  "docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "docker/zipkin.yml": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "template-file-docker": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator docker of rust JHipster blueprint > monolith with kafka > should succeed 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "docker/app.yml": {
    "stateCleared": "modified",
  },
  "docker/kafka.yml": {
    "stateCleared": "modified",
  },
  "docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "docker/services.yml": {
    "stateCleared": "modified",
  },
  "docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "template-file-docker": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator docker of rust JHipster blueprint > monolith without consul > should succeed 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "docker/app.yml": {
    "stateCleared": "modified",
  },
  "docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "docker/services.yml": {
    "stateCleared": "modified",
  },
  "docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "template-file-docker": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator docker of rust JHipster blueprint > monolith without kafka > should succeed 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "docker/app.yml": {
    "stateCleared": "modified",
  },
  "docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "docker/services.yml": {
    "stateCleared": "modified",
  },
  "docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "template-file-docker": {
    "stateCleared": "modified",
  },
}
`;

exports[`SubGenerator docker of rust JHipster blueprint > run > should succeed 1`] = `
{
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "docker/app.yml": {
    "stateCleared": "modified",
  },
  "docker/postgresql.yml": {
    "stateCleared": "modified",
  },
  "docker/prometheus/prometheus.yml": {
    "stateCleared": "modified",
  },
  "docker/services.yml": {
    "stateCleared": "modified",
  },
  "docker/sonar.yml": {
    "stateCleared": "modified",
  },
  "package.json": {
    "stateCleared": "modified",
  },
  "template-file-docker": {
    "stateCleared": "modified",
  },
}
`;
